syntax = "proto2";

package dev.vhonta.content.puller.proto;

import "zio-temporal.proto";
import "content_feed.proto";
import "content_integrations.proto";

message ListTopics {
  repeated zio.temporal.protobuf.UUID subscribers = 1;
}

message ListIntegrations {
  required dev.vhonta.content.proto.ContentFeedIntegrationType  integrationType = 1;
}

message ContentFeedIntegrations {
  repeated dev.vhonta.content.proto.ContentFeedIntegration integrations = 1;
}

message PullingResult {
  required int64 processed = 1;
}

message PullerResetState {
  required int64 integrationId = 1;
}
